--- a/development.env
+++ b/development.env
@@ -1,3 +1,3 @@
 PORT=8000
-CURRENT_URL=http://localhost:8000/api/
-API_URL=http://localhost:3000
+CURRENT_URL=http://staging.quran.com/api/
+API_URL=http://staging.quran.com:3000
