--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "babel-plugin-typecheck": "^3.8.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "body-parser": "^1.14.1",
@@ -63,6 +63,7 @@
     "humps": "^1.0.0",
     "imports-loader": "^0.6.3",
     "jquery": "^2.1.4",
+    "js-yaml": "~3.6.0",
     "json-loader": "~0.5.1",
     "loopstacks": "0.0.3",
     "moment": "^2.12.0",
@@ -74,13 +75,14 @@
     "proxy-middleware": "^0.14.0",
     "qs": "^6.1.0",
     "raw-loader": "^0.5.1",
-    "react": "^0.14.8",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-addons-create-fragment": "^15.3.0",
     "react-bootstrap": "^0.28.4",
     "react-cookie": "^0.3.4",
-    "react-dom": "^0.14.0",
     "react-helmet": "^2.3.1",
     "react-metrics": "^1.1.0",
-    "react-paginate": "^0.4.0",
+    "react-paginate": "^2.1.3",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-bootstrap": "^0.20.1",
@@ -93,15 +95,14 @@
     "serialize-javascript": "^1.0.0",
     "serve-favicon": "^2.2.1",
     "sitemap": "^1.5.0",
+    "sjcl": "~1.0.3",
     "style-loader": "^0.13.1",
     "superagent": "^1.2.0",
     "url": "^0.11.0",
     "url-loader": "~0.5.5",
     "webpack": "^1.10.3",
     "webpack-isomorphic-tools": "^2.2.41",
-    "winston": "^1.1.2",
-    "sjcl": "~1.0.3",
-    "js-yaml": "~3.6.0"
+    "winston": "^1.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
@@ -132,7 +133,7 @@
     "path": "^0.11.14",
     "phantomjs-polyfill": "0.0.1",
     "piping": "^0.3.0",
-    "react-addons-test-utils": "^0.14.7",
+    "react-addons-test-utils": "^15.3.0",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.1.1",
